--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ requests = "^2.28.0"
 matplotlib = "^3.5.2"
 numpy = "^1.22.4"
 earthengine-api = "^0.1.315"
+Cartopy = "^0.20.2"
 
 [tool.poetry.dev-dependencies]
 
